force-app/main/default/objects/APT_Credit_Assessment__c/fields/APT_Suburb__c.field-meta.xml
<CustomField>
    <fullName>APT_Suburb__c</fullName>
    <label>Suburb</label>
    <length>25</length>
    <type>Text</type>
</CustomField>