force-app/main/default/objects/APT_Credit_Assessment__c/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <description>This field is used to capture the business contact person first name from BCA online application.</description>
    <label>Contact First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>