force-app/main/default/objects/APT_Credit_Assessment__c/fields/Direct_Debit_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Account_Name__c</fullName>
    <description>This field is used to store the Direct Debit Account Name from BCA Online application.</description>
    <label>Direct Debit Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>