force-app/main/default/objects/APT_Credit_Assessment__c/fields/Equifax_Status__c.field-meta.xml
<CustomField>
    <fullName>Equifax_Status__c</fullName>
    <description>This field will be used to store the status returned from the equifax credit check callout. Possible values are ERROR, PRE_DECLINE, PRE_REFER, DECLINE, REFER, WITHDRAW, APPROVE.</description>
    <label>Equifax Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>