force-app/main/default/objects/APT_Credit_Assessment__c/fields/L2C_AP_Proposed_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>L2C_AP_Proposed_Credit_Limit__c</fullName>
    <label>Aus Post Proposed (plus existing limit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>