force-app/main/default/objects/APT_Credit_Assessment__c/fields/L2C_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>L2C_Assessment_Type__c</fullName>
    <label>Assessment Initiation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Entry Screen</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>