force-app/main/default/objects/APT_Credit_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APT_ABN__c</columns>
    <columns>APT_ABR_Report__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>