force-app/main/default/objects/APT_Credit_Assessment__c/listViews/Credit_Assessments.listView-meta.xml
<ListView>
    <fullName>Credit_Assessments</fullName>
    <columns>NAME</columns>
    <columns>APT_Legal_Entity_Name__c</columns>
    <columns>APT_ABN__c</columns>
    <columns>APT_Credit_Assessment_Status__c</columns>
    <columns>L2C_AP_Proposed_Credit_Limit__c</columns>
    <columns>L2C_Star_Track_Proposed_Credit_Limit__c</columns>
    <columns>APT_Charge_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>APT_Proposal__c</columns>
    <filterScope>Everything</filterScope>
    <label>Credit Assessments</label>
    <sharedTo>
        <group>APT_Credit_Management_Team</group>
        <role>SO_Sales_Excellence</role>
    </sharedTo>
</ListView>