force-app/main/default/objects/APT_Credit_Assessment__c/listViews/Credit_Assessments_Online.listView-meta.xml
<ListView>
    <fullName>Credit_Assessments_Online</fullName>
    <columns>NAME</columns>
    <columns>APT_Legal_Entity_Name__c</columns>
    <columns>APT_ABN__c</columns>
    <columns>APT_Credit_Assessment_Status__c</columns>
    <columns>APT_Requested_Credit_Limit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>L2C_Assessment_Type__c</columns>
    <columns>Integration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>L2C_Assessment_Type__c</field>
        <operation>equals</operation>
        <value>Online</value>
    </filters>
    <label>Credit Assessments - Online</label>
</ListView>