force-app/main/default/objects/APT_Credit_Assessment__c/listViews/Test_Assessments.listView-meta.xml
<ListView>
    <fullName>Test_Assessments</fullName>
    <columns>NAME</columns>
    <columns>APT_ABN__c</columns>
    <columns>APT_ACN__c</columns>
    <columns>APT_Contact_Name__c</columns>
    <columns>APT_Organisation_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Test Assessments</label>
    <language>en_US</language>
</ListView>